Fixed so it can display on smaller screens better

--- a/Css/Drivers.css
+++ b/Css/Drivers.css
@@ -2,6 +2,7 @@ body {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    overflow: hidden;
 }
 
 .Header {
@@ -42,13 +43,16 @@ body {
 }
 
 .Drivers-Container {
+    width: 100%;
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
-    gap: 20px;
-    margin:40px 70px 0 118px;
-    padding: 0 20px;
+    gap: 40px;
+    padding: 40px 20px;
     box-sizing: border-box;
+    margin: 40px auto 0 auto;
+    max-width: 1500px;
+    transform: translateX(79px);
 }
 
 .Max,
@@ -58,7 +62,7 @@ body {
     height: 273px;
     position: absolute;
     bottom: 0;
-    left: 140px;
+    left: 125px;
 }
 
 .Max-Verstappen,
